# ACME

./: .env.example  .gitignore  Dockerfile  INVESTOR_DEMO_OUTPUT.txt  LICENSE  LONGMEMEVAL.md  Makefile  PAPER.md  PAPER.tex  POSITIONING.md  README.md  RELEASE_v0.1.0.md  RELEASE_v0.2.0.md  RELEASE_v0.3.0.md  docker-compose.yml  index.html  paper-figures.tex  pyproject.toml  quant.html  requirements.txt
acme/: __init__.py  config.py  main.py  orchestrator.py  schemas.py
azure/: Dockerfile.consolidation  configure-consumption-ingress.sh  configure-premium-ingress.sh  consolidation-job.sh  demo-squad-stack.sh  deploy.sh  embedding-deploy.sh  fix-neo4j-tenant.sh  install-nexus-vm.sh  parameters.env.example  postgres-flexible.sh  remove-postgres-container.sh  repair-nexus-vm.sh  seed-nexus-vm.sh  set-api-key.sh
benchmarks/: compare-9fda8d44-prod-verify.json
docs/: ARXIV_SUBMISSION.md  AZURE_COSTS.md  BASELINES.md  BENCHMARK_RESULTS.md  HUMAN_AUDIT_MEMORYBENCH.md  LONGMEMEVAL.md  PAPER.md  PAPER.tex  POSITIONING.md  demo.html  index.html  paper-figures.tex  paper-preamble.tex  paper-tables.tex  paper-template.tex
quant/: README.md
scripts/: analyze_memorybench_export.py  bootstrap.py  build_canonical_compare_export.py  consolidation_worker.py  demo.py  deploy_demo.sh  deploy_membench_v3.sh  download_longmemeval.sh  export_paper_pdf.sh  generate_paper_ci_table.py  investor_demo.py  pause_demo.sh  reclean_demo.sh  record_investor_demo.sh  reset_demo.sh  run_ablation_gate.py  run_ablation_prod.sh  run_local_fidelity_baselines.py  run_longmemeval.py  run_memorybench.py  (+3 more)
(+191 files in other folders)
