[project]
name = "acme"
version = "0.1.0"
description = "Adaptive Cognitive Memory Engine"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0,<1.0",
    "uvicorn[standard]>=0.32.0,<1.0",
    "sqlalchemy[asyncio]>=2.0.36,<3.0",
    "asyncpg>=0.30.0,<1.0",
    "neo4j>=5.26.0,<7.0",
    "httpx>=0.28.0,<1.0",
    "pydantic>=2.10.0,<3.0",
    "pydantic-settings>=2.6.0,<3.0",
    "python-dotenv>=1.0.1,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<9.0",
    "pytest-asyncio>=0.24.0,<1.0",
]
demo-ui = [
    "playwright>=1.49.0,<2.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["acme*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
